# Minecraft-real-structure

./: .gitignore  AGENTS.md  Minecraft_Real_Structure_AI建筑多视角重建系统技术方案.md  Minecraft_Real_Structure_建筑生成体系总结.txt  README.md  prompt_for_chatgpt.md  pyproject.toml  requirements.txt
docs/: issues-v1.2.0-不足分析.md  issues-v4.md
src/: main.py
src/analysis/: ai_analyzer.py  dsl_validator.py  enhanced_analyzer.py  identifier.py  mock_analyzer.py  templates.py
src/exporter/: nbt_exporter.py
src/generator/: block_builder.py  block_map.py  geometry.py
src/models/: __init__.py  building.py
src/utils/: wikipedia.py
src/web/: app.py
src/web/static/: style.css
src/web/templates/: error.html  index.html  progress.html  result.html
tests/: test_ai_analyzer.py  test_block_builder.py  test_block_map.py  test_dsl_validator.py  test_geometry.py  test_integration.py  test_mock_analyzer.py  test_models.py  test_nbt_exporter.py
