[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "minecraft-real-structure"
version = "1.1.2"
description = "AI 驱动的工具，将现实建筑照片转换成 Minecraft 三维结构"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Minecraft-Real-Structure Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "nbtlib>=2.0",
    "Pillow>=10.0",
    "click>=8.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
]
ai = [
    "openai>=1.0",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
mc-structure = "src.main:cli"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-p", "no:cacheprovider",
    "-q",
]
# 本机 py -3 = Python 3.14 + pytest 9.1.1。
# no:cacheprovider 规避 Windows .pytest_cache WinError 183（不同 pytest 版本混用残留）。
# 若仍报 Temp 权限拒绝（pytest-of-<user> 无法扫描），可在命令行加：
#   --basetemp=C:\Users\<用户名>\AppData\Local\Temp\opencode\pytest
filterwarnings = [
    "ignore::DeprecationWarning",
]
